// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary Component correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should render ExpensesSummary Component correctly with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $23,512,312.43
  </h1>
</div>
`;
